# CSCE121

./: CSCE 121 Extra Credit 2.docx  README.md
Assignment_2/: Assignment_2.mk  Assignment_2.project  main.cpp
BullsandCows/: BetterBullsAndCows.h  BullsandCows.mk  BullsandCows.project  BullsandCows.txt  bullsandcows.cpp  bullscows
CSCE 121 Assignment 1/: CSCE 121 Assignment 1.workspace  Makefile
CSCE_121_Assignment_1/: CSCE_121_Assignment_1.workspace  Makefile
Class C++/: Class C++.workspace  Makefile  RecursionPractice.cpp
Class C++/FLTK Practice/: CMakeLists.txt  main.cpp
ClassQuadraticEquation/: ClassQuadraticEquation.mk  ClassQuadraticEquation.project  main.cpp
CodeTester/: CodeTester.mk  CodeTester.project  Lab15.cpp
FLTK Homework/: NavButton.cpp  NavButton.h  Viewer.cpp  Viewer.h  main.cpp
Homework2/: Homework2.mk  Homework2.project  Homework2.txt  qesolver.cpp
Image Viewer/: CMakeLists.txt  NavButton.cpp  NavButton.h  Viewer.cpp  Viewer.h  main.cpp
ImprovedBullsAndCows/: ImprovedBullsAndCows.mk  ImprovedBullsAndCows.project  ImprovedBullsAndCows.txt  bullsandcows.cpp
IntVectorBullsAndCows/: BullsAndCowsRUN  IntBullsAndCows.cpp  IntVectorBullsAndCows.mk  IntVectorBullsAndCows.project  IntVectorBullsAndCows.txt
Labs/: Lab 21.docx  Lab 8 Questions.docx
Labs/Lab 52/: CMakeLists.txt  main.cpp
Labs/Lab51/: CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h  main.cpp
NewPalindromes/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  palindromes
Palindromes/: Palindromes.mk  Palindromes.project  Palindromes.txt  palindrome.cpp
RealBullsandCowsInternetCode/: RealBullsandCowsInternetCode.mk  RealBullsandCowsInternetCode.project
StoreBackEnd/: CMakeLists.txt  Customer.cpp  Customer.h  Product.cpp  Product.h  Store.cpp  Store.h  main.cpp
StoreBackEnd2/: CMakeLists.txt  customer.cpp  customer.h  main.cpp  product.cpp  product.h  store.cpp  store.h
Temperature Queries/: CMakeLists.txt  Temperature_Queries  linkedlist.cpp  linkedlist.h  main.cpp  node.h  temperaturedb.cpp  temperaturedb.h
Test 1/: CSCE 121 Test 1 Slides.pptx  CSCE 121 Test 1 pt 2.pptx  CSCE 121 Test 1 pt 3.pptx  Study Guide 1.docx  Study Guide 2.docx  Study Guide 3.docx  Study Guide 4.docx  csce 121 Test 1 pt 4.pptx
Test 2/: Study Guide 1.docx  Study Guide 2.docx  Study Guide 3.docx  Study Guide 4.docx  Test 2 Slide Set 1.pptx  Test 2 Slide Set 2.pptx  Test 2 Slide Set 3.pptx  Test 2 Slide Set 4.pptx
Test 3 Final Exam/: Final Slide Set 1.pptx  Final Slide Set 2.pptx  Final Slide Set 3.pptx  Final Slide Set 4 (Read but don't stress).pptx  Study Guide 1.docx  Study Guide 2.docx  Study Guide 3.docx
TopographicMap/: Map  Map.cpp  TopographicMap.mk  TopographicMap.project  TopographicMap.txt  map-input-844-480.dat.ppm
(+154 files in other folders)
